publish: Fix image size on mobile
generated from commit 04a788d88af30377077adf8cb98ed9117a9b6fa3

--- a/css/text.css
+++ b/css/text.css
@@ -2,6 +2,7 @@
 
 img {
     border: 1px solid #000;
+    max-width: 100%;
 }
 
 .main {
